Attempted to solve threeSum